--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/887c282ba3.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="Stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/search.css">
+    <link rel="stylesheet" href="./css/description.css">
+    <link rel="stylesheet" href="./css/social.css">
+    <link rel="stylesheet" href="./css/product.css">
     <title>Headphone Purple</title>
 </head>
 <body>
@@ -19,7 +25,24 @@
         <i class="fas fa-search"></i>
       </div>
   </header>  
-  <main>main</main>
+  <main>
+      <div class="description">
+          <h1 class="description__title">Razer Kraken BT</h1>
+          <p class="description__text"> Be free to express your own style with the Razer Kraken BT. A wireless Bluetooth headset with headset lighting along with clear sounding 40mm drivers.</p>
+      </div>
+      <div class="product">
+          <span class="product__price">>US$159.99</span>
+          <img src="./img/razer-kraken-bt.png" alt="headphone purple" class="product__image">
+          <div class="product__navegation-container">
+              <a href="#" class="navegation">
+                  <i class="fas fa-chevron-left"></i>
+              </a> 
+              <a href="#" class="navegation">
+                  <i class="fa-solid fa-chevron-right"></i>
+              </a>      
+      </div>
+      <div class="social-media"></div> 
+     </main>
   <footer>footer</footer>
 </body>
 </html>
