--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="./img/razer-kraken-bt.png" alt="headphone purple" class="product__image">
           <div class="product__navegation-container">
               <a href="#" class="navegation">
-                  <i class="fas fa-chevron-left"></i>
+                  <i class="fa-solid fa-chevron-left"></i>
               </a> 
               <a href="#" class="navegation">
                   <i class="fa-solid fa-chevron-right"></i>
