--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="./css/description.css">
     <link rel="stylesheet" href="./css/social.css">
     <link rel="stylesheet" href="./css/product.css">
+    <link rel="stylesheet" href="./css/navegation.css">
+    <link rel="stylesheet" href="./css/social.icon.css">
+    <link rel="stylesheet" href="./css/info.css">
     <title>Headphone Purple</title>
 </head>
 <body>
@@ -40,9 +43,46 @@
               <a href="#" class="navegation">
                   <i class="fa-solid fa-chevron-right"></i>
               </a>      
+        </div>
       </div>
-      <div class="social-media"></div> 
+      <div class="social-media">
+          <li>
+            <a href="" class="social-icon">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+          </li>
+          <li>
+            <a href="" class="social-icon">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+          </li><li>
+            <a href="" class="social-icon">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+          </li><li>
+            <a href="" class="social-icon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+          </li>
+          
+      </div> 
      </main>
-  <footer>footer</footer>
+  <footer>
+      <div class="info">
+          <span class="info__number">- 01 -</span>
+          <span class="info__feature">FREQUENCY RESPONSE</span>
+          <span class="info__value"> 20Hz - 20kHz</span>
+      </div>
+      <div class="info">
+        <span class="info__number">- 02 -</span>
+        <span class="info__feature">IMPEDANCE</span>
+        <span class="info__value">32 Ω  </span>
+    </div>
+    <div class="info">
+        <span class="info__number">- 03-</span>
+        <span class="info__feature">SENSITIVITY</span>
+        <span class="info__value"> 96 dB/mW a 1KHz</span>
+    </div>
+  </footer>
 </body>
 </html>
