--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
       <div class="product">
           <span class="product__price">>US$159.99</span>
           <img src="./img/razer-kraken-bt.png" alt="headphone purple" class="product__image">
-          <div class="product__navegation-container">
+          <div class="product__navegation-container" aria-label="linck para a imagem anterior">
               <a href="#" class="navegation">
                   <i class="fa-solid fa-chevron-left"></i>
               </a> 
-              <a href="#" class="navegation">
+              <a href="#" class="navegation" aria-label="linck para a proxima pagina">
                   <i class="fa-solid fa-chevron-right"></i>
               </a>      
         </div>
       </div>
       <div class="social-media">
           <li>
-            <a href="" class="social-icon">
+            <a href="" class="social-icon" aria-label="link para o youtube">
                 <i class="fa-brands fa-youtube"></i>
               </a>
           </li>
           <li>
-            <a href="" class="social-icon">
+            <a href="" class="social-icon" aria-label="link para o twittwer">
                 <i class="fa-brands fa-twitter"></i>
               </a>
           </li><li>
-            <a href="" class="social-icon">
+            <a href="" class="social-icon"aria-label="link para o instagram">
                 <i class="fa-brands fa-instagram"></i>
               </a>
           </li><li>
-            <a href="" class="social-icon">
+            <a href="" class="social-icon"aria-label="link para para o fecebook">
                 <i class="fa-brands fa-facebook-f"></i>
               </a>
           </li>
